--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 </head>
 <body>
 <header>
-    <h1>Welcome to Static Site</h1>
+    <h1>Welcome to My Website</h1>
 </header>
 <section>
     <p>About this project...</p>
