Added about section

--- a/index.html
+++ b/index.html
@@ -10,9 +10,11 @@
 <header>
     <h1>Welcome to Static Site</h1>
 </header>
+
 <section>
-    <p>About this project...</p>
+    <p>About this project</p>
 </section>
+
 <footer>
     <p>&copy; 2024 My Static Site</p>
 </footer>
